--- a/contact.html
+++ b/contact.html
@@ -11,81 +11,109 @@
 
 </head>
 
-<body>
-    <header>
-        <div class="logo">
-            <h1>J|C</h1>
-        </div>
-        <nav>
-            <div class="nav-container">
-                <a href="index.html">Home</a>
-                <a href="about.html">About Us</a>
-                <a href="gallery.html">Gallery</a>
-                <a href="contact.html">Contact</a>
-            </div>
-        </nav>
-    </header>
 
-    <div class="content-container">
-        <header>
-        </header>
-        <div class="form-box">
-            <form action="#" method="post">
-                <div>
-                    <label for="firstname"> First Name:</label>
-                    <input type="text" id="firstname" name="name" required>
-                </div>
-                <div>
-                    <label for="lastname">last name:</label>
-                    <input type="text" id="lastname" name="lastname" required>
-                </div>
-                <div>
-                    <label for="contactnumber">contact number:</label>
-                    <input type="number" id="contactnumber" name="number">
-                </div>
-                <div>
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-                <div>
-                    <label for="message">Message:</label>
-                    <textarea id="message" name="message" rows="4" required></textarea>
-                    <button type="submit">Submit</button>
-                </div>
-            </form>
-        </div>
+<body>
+      <header>
+       <div class="logo">
+           <h1>J|C</h1>
+       </div>
+       <nav>
+           <div class="nav-container">
+               <a href="index.html">Home</a>
+               <a href="about.html">About Us</a>
+               <a href="gallery.html">Gallery</a>
+               <a href="contact.html">Contact</a>
+               </div>
+       </nav>
+   </header>
+    <div class="form-box">
+        <form action="#" method="post">
+            <div>
+                <label for=" first name">Name:</label>
+                <input type="text" id="name" name="name" required>
+            </div>
+            <div>
+                <label for="last name">last name</label>
+                <input type="text" name="lastname" required>
+            </div>
+            <div>
+                <label for="contactnumber">contact number</label>
+                <input type="number" name="number">
+            </div>
+            <div>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div>
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" rows="4" required></textarea>
+
+                <button type="submit">Submit</button>
+            </div>
+        </form>
     </div>
-    <footer class="footer">
-        <div class="contact-footer">
+
+
+    <div class="information">
+    <table class="text-center">
+        <tr>
+            <th></th>
+            <th>Open</th>
+            <th>Close</th>
+        </tr>
+        <tr>
+            <td>open 7 days a week</td>
+            <td>04:00pm</td>
+            <td>10:00pm</td>
+        </tr>
+
+    </table>
+
+    <div class="text-right contact-box-right">
+        <h3>Get in touch</h3>
+
+        <div>
+            <span class="bold">Phone: </span>
+            <span> 012454 12451</span>
+        </div>
+
+    </div>
+    </div>
+      <section class="map">
+    <div id="map"><iframe width="300px" height="323px"  frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=The%20Grosvenor%20Museum%20Museum%20in%20Chester,%20England+(The%20Grosvenor%20Museum%20Museum%20in%20Chester,%20England)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.maps.ie/population/">Population mapping</a></iframe></div>
+        </section>
+
+
+    <footer>
         <ul class="social-networks">
             <li>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our Facebook page (opens in a new tab)">
+                   aria-label="Visit our Facebook page (opens in a new tab)">
                     <i class="fa-brands fa-facebook"></i>
                 </a>
             </li>
             <li>
                 <a href="https://www.twitter.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our Twitter page (opens in a new tab)">
+                   aria-label="Visit our Twitter page (opens in a new tab)">
                     <i class="fa-brands fa-twitter-square"></i>
                 </a>
             </li>
             <li>
                 <a href="https://www.linkedin.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our LinkedIn page (opens in a new tab)">
+                   aria-label="Visit our LinkedIn page (opens in a new tab)">
                     <i class="fa-brands fa-linkedin"></i>
                 </a>
             </li>
             <li>
                 <a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our Instagram page (opens in a new tab)">
+                   aria-label="Visit our Instagram page (opens in a new tab)">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
             </li>
         </ul>
         <p>&copy; 2024 Your Company. All rights reserved.</p>
-    </div>
     </footer>
+
 </body>
 
 </html>
