--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,7 @@
         </div>
 
         <div id="media-gallerygrid">
-            <div class="gallery"><img src="assets/images/nature-image-torn-paper-style.jpg" alt="nature-image-torn-paper-style"></div>
+            <div class="gallery"><img src="nature-image-torn-paper-style.jpg" alt="nature-image-torn-paper-style"></div>
 
             <div class="gallery">
                 <img src="assets/images/assortment-colored-plant-leaves.jpg" alt="assortment-colored-plant-leaves">
@@ -69,7 +69,7 @@
                 <img src="assets/images/javier-miranda-0Iuutf928Rk-unsplash(1).jpg" alt="javier-miranda-0Iuutf928Rk-unsplash">
             </div>
             <div class="gallery">
-                <img src="assets/images/nick-andreka-WWQzZO6kORA-unsplash.jpg" alt="nick-andreka-WWQzZO6kORA-unsplash">
+                <img src="assets/images/nick-andreka-WWQzZO6kORA-unsplash.jpg">
             </div>
             <div class="gallery">
                 <img src="assets/images/alex-shuper-EfWH_IxDgLE-unsplash.jpg" alt="alex-shuper-EfWH_IxDgLE-unsplash">
