--- a/gallery.html
+++ b/gallery.html
@@ -51,20 +51,20 @@
             </div>
 
             <div class="gallery">
-                <img src="assets/images/assortment-colored-plant-leaves.jpg" alt="">
+                <img src="assets/images/assortment-colored-plant-leaves.jpg" alt="autumn leave">
             </div>
             <div class="gallery">
-                <img src="assets/images/background-textured-creamy-colorful-paint.jpg" alt="">
+                <img src="assets/images/background-textured-creamy-colorful-paint.jpg" alt="cream">
             </div>
             <div class="gallery">
-                <img src="assets/images/kool-kat.jpg" alt="">
+                <img src="assets/images/kool-kat.jpg" alt="kool kat">
             </div>
             <div class="gallery">
-                <img src="assets/images/astronaught.jpg" alt="">
+                <img src="assets/images/astronaught.jpg" alt="astranaught/spaceman">
             </div>
           
             <div class="gallery">
-                <img src="assets/images/nick-andreka-WWQzZO6kORA-unsplash.jpg">
+                <img src="assets/images/nick-andreka-WWQzZO6kORA-unsplash.jpg" alt="unsplash">
             </div>
             <div class="gallery">
                 <img src="assets/images/alex-shuper-EfWH_IxDgLE-unsplash.jpg" alt="alex-shuper-EfWH_IxDgLE-unsplash">
