--- a/gallery.html
+++ b/gallery.html
@@ -43,35 +43,38 @@
             </div>
         </div>
 
-     
-                <img src="assets/images/assortment-colored-plant-leaves.jpg" alt="assortment-colored-plant-leaves">
-            </div>
-            <div class="gallery">
-                <img src="assets/images/background-textured-creamy-colorful-paint.jpg" alt="background-textured-creamy-colorful-paint">
-            </div>
+     <div id="media-gallerygrid">
+    <img src="assets/images/assortment-colored-plant-leaves.jpg" alt="assortment-colored-plant-leaves">
+</div>
 
-            <div class="gallery">
-                <img src="assets/images/assortment-colored-plant-leaves.jpg" alt="autumn leave">
-            </div>
-            <div class="gallery">
-                <img src="assets/images/background-textured-creamy-colorful-paint.jpg" alt="cream">
-            </div>
-            <div class="gallery">
-                <img src="assets/images/kool-kat.jpg" alt="kool kat">
-            </div>
-            <div class="gallery">
-                <img src="assets/images/astronaught.jpg" alt="astranaught/spaceman">
-            </div>
-          
-            <div class="gallery">
-                <img src="assets/images/nick-andreka-WWQzZO6kORA-unsplash.jpg" alt="unsplash">
-            </div>
-            <div class="gallery">
-                <img src="assets/images/alex-shuper-EfWH_IxDgLE-unsplash.jpg" alt="alex-shuper-EfWH_IxDgLE-unsplash">
+<div class="gallery">
+    <img src="assets/images/background-textured-creamy-colorful-paint.jpg" alt="background-textured-creamy-colorful-paint">
+</div>
 
-            </div>
-        </div>
-    </div>
+<div class="gallery">
+    <img src="assets/images/assortment-colored-plant-leaves.jpg" alt="autumn leave">
+</div>
+
+<div class="gallery">
+    <img src="assets/images/background-textured-creamy-colorful-paint.jpg" alt="cream">
+</div>
+
+<div class="gallery">
+    <img src="assets/images/kool-kat.jpg" alt="kool kat">
+</div>
+
+<div class="gallery">
+    <img src="assets/images/astronaught.jpg" alt="astronaut/spaceman">
+</div>
+
+<div class="gallery">
+    <img src="assets/images/nick-andreka-WWQzZO6kORA-unsplash.jpg" alt="unsplash">
+</div>
+
+<div class="gallery">
+    <img src="assets/images/alex-shuper-EfWH_IxDgLE-unsplash.jpg" alt="alex-shuper-EfWH_IxDgLE-unsplash">
+</div>
+
 
 
     <footer>
