--- a/gallery.html
+++ b/gallery.html
@@ -43,7 +43,7 @@
             </div>
         </div>
 
-     <div id="media-gallerygrid">
+  <div id="media-gallerygrid">
     <img src="assets/images/assortment-colored-plant-leaves.jpg" alt="assortment-colored-plant-leaves">
 </div>
 
@@ -69,6 +69,10 @@
 
 <div class="gallery">
     <img src="assets/images/nick-andreka-WWQzZO6kORA-unsplash.jpg" alt="unsplash">
+</div>
+
+<div class="gallery">
+    <img src="assets/images/alex-shuper-EfWH_IxDgLE-unsplash.jpg" alt="alex-shuper-EfWH_IxDgLE-unsplash">
 </div>
 
 <div class="gallery">
