--- a/gallery.html
+++ b/gallery.html
@@ -42,42 +42,44 @@
                 </div>
             </div>
         </div>
+<div id="media-gallerygrid">
+    <div class="gallery">
+        <img src="assets/images/assortment-colored-plant-leaves.jpg" alt="Assortment Colored Plant Leaves">
+    </div>
 
-  <div id="media-gallerygrid">
-    <img src="assets/images/assortment-colored-plant-leaves.jpg" alt="assortment-colored-plant-leaves">
+    <div class="gallery">
+        <img src="assets/images/background-textured-creamy-colorful-paint.jpg" alt="Background Textured Creamy Colorful Paint">
+    </div>
+
+    <div class="gallery">
+        <img src="assets/images/autumn-leave.jpg" alt="Autumn Leaves">
+    </div>
+
+    <div class="gallery">
+        <img src="assets/images/background-textured-creamy-colorful-paint.jpg" alt="Cream">
+    </div>
+
+    <div class="gallery">
+        <img src="assets/images/kool-kat.jpg" alt="Kool Kat">
+    </div>
+
+    <div class="gallery">
+        <img src="assets/images/astronaut.jpg" alt="Astronaut/Spaceman">
+    </div>
+
+    <div class="gallery">
+        <img src="assets/images/nick-andreka-WWQzZO6kORA-unsplash.jpg" alt="Unsplash">
+    </div>
+
+    <div class="gallery">
+        <img src="assets/images/alex-shuper-EfWH_IxDgLE-unsplash.jpg" alt="Alex Shuper Unsplash">
+    </div>
+
+    <div class="gallery">
+        <img src="assets/images/alex-shuper-EfWH_IxDgLE-unsplash.jpg" alt="Alex Shuper Unsplash">
+    </div>
 </div>
 
-<div class="gallery">
-    <img src="assets/images/background-textured-creamy-colorful-paint.jpg" alt="background-textured-creamy-colorful-paint">
-</div>
-
-<div class="gallery">
-    <img src="assets/images/assortment-colored-plant-leaves.jpg" alt="autumn leave">
-</div>
-
-<div class="gallery">
-    <img src="assets/images/background-textured-creamy-colorful-paint.jpg" alt="cream">
-</div>
-
-<div class="gallery">
-    <img src="assets/images/kool-kat.jpg" alt="kool kat">
-</div>
-
-<div class="gallery">
-    <img src="assets/images/astronaught.jpg" alt="astronaut/spaceman">
-</div>
-
-<div class="gallery">
-    <img src="assets/images/nick-andreka-WWQzZO6kORA-unsplash.jpg" alt="unsplash">
-</div>
-
-<div class="gallery">
-    <img src="assets/images/alex-shuper-EfWH_IxDgLE-unsplash.jpg" alt="alex-shuper-EfWH_IxDgLE-unsplash">
-</div>
-
-<div class="gallery">
-    <img src="assets/images/alex-shuper-EfWH_IxDgLE-unsplash.jpg" alt="alex-shuper-EfWH_IxDgLE-unsplash">
-</div>
 
 
 
